[package]
name = "file_access"
version = "0.1.9"
edition = "2021"
description = "A file_access wrapper-lib to make performing certain file manipulations more convenient."
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
